--- a/index.html
+++ b/index.html
@@ -134,16 +134,13 @@
           onBottomPassedReverse: function() {
             $('.fixed.menu').transition('fade out');
           }
-        })
-      ;
+        });
 
       // create sidebar and attach to menu open
       $('.ui.sidebar')
-        .sidebar('attach events', '.toc.item')
-      ;
+        .sidebar('attach events', '.toc.item');
 
-    })
-  ;
+    });
   </script>
 </head>
 <body>
@@ -155,7 +152,7 @@
     <a class="item">About OPHION</a>
     <div class="right menu">
       <div class="item">
-        <a class="ui button">Login!</a>
+        <a href="login.html" class="ui button">Login!</a>
       </div>
       <div class="item">
         <a class="ui primary button">New User</a>
@@ -167,8 +164,8 @@
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
   <a class="active item">Home</a>
-  <a class="item">Login</a>
-  <a class="item">Signup</a>
+  <a href="login.html" class="item">Login@</a>
+  <a class="item">New User</a>
 </div>
 
 
@@ -184,8 +181,8 @@
         <a class="active item">Home</a>
         <a class="item">About OPHION</a>
         <div class="right item">
-          <a class="ui inverted button">Login!</a>
-          <a class="ui inverted button">Sign Up</a>
+          <a href="login.html" class="ui inverted button">Login!</a>
+          <a class="ui inverted button">New User</a>
         </div>
       </div>
     </div>
@@ -209,26 +206,27 @@
           <div class="ui inverted link list">
             <a href="#" class="item">Sitemap</a>
             <a href="#" class="item">Contact Us</a>
+            <a href="#" class="item">Privacy Policy</a>
+            <a href="#" class="item">Terms of Use</a>
           </div>
         </div>
         <div class="three wide column">
           <h4 class="ui inverted header">Services</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item">Banana Pre-Order</a>
-            <a href="#" class="item">DNA FAQ</a>
-            <a href="#" class="item">How To Access</a>
-            <a href="#" class="item">Favorite X-Men</a>
+            <a href="#" class="item">FAQ</a>
+            <a href="#" class="item">How to use OPHION</a>
+            <a href="#" class="item">Tell us how we're doing!</a>
           </div>
         </div>
         <div class="seven wide column">
-          <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          <h4 class="ui inverted header">© 2016 OPHION</h4>
+          <p>Extra space</p>
         </div>
       </div>
     </div>
   </div>
-</div>
- -->
-</body>
 
+  
+</div>
+</body>
 </html>
