corrected welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -175,13 +175,13 @@
         <a class="toc item">
           <i class="sidebar icon"></i>
         </a>
-        <a href="#" class="active item">Menu
+        <a href="welcome.html" class="active item">Menu
         <script>
 		$('.ui.sidebar')
 		  .sidebar('show');
 		</script>
         </a>
-        <a href="home.html" class="item">Home</a>
+        <a href="welcome.html" class="item">Home</a>
         <a href="about.html" class="item">About OPHION</a>
         <div class="right item">
           <a href="logout.html" class="ui inverted button">Logout</a>
