updated site pages

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Home</a>
-    <a href="about.html" class="item">About OPHION</a>
+    <a href="aboutsite.html" class="item">About OPHION</a>
     <div class="right menu">
       <div class="item">
         <a href="login.html" class="ui button">Login!</a>
@@ -179,7 +179,7 @@
           <i class="sidebar icon"></i>
         </a>
         <a class="active item">Home</a>
-        <a href="about.html" class="item">About OPHION</a>
+        <a href="aboutsite.html" class="item">About OPHION</a>
         <div class="right item">
           <a href="login.html" class="ui inverted button">Login!</a>
           <a href="newuser.html"class="ui inverted button">New User</a>
@@ -204,7 +204,7 @@
     <div class="ui container">
       <div class="ui stackable inverted divided equal height stackable grid">
         <div class="three wide column">
-          <h4 href="about.html" class="ui inverted header">About OPHION</h4>
+          <h4 href="aboutsite.html" class="ui inverted header">About OPHION</h4>
           <div class="ui inverted link list">
             <a href="#" class="item">Sitemap</a>
             <a href="#" class="item">Contact Us</a>
@@ -222,7 +222,8 @@
         </div>
         <div class="seven wide column">
           <h4 class="ui inverted header">© 2016 OPHION</h4>
-          <p>Extra space</p>
+          <a href="aboutsite.html" class="item">About Project: OPHION</a><br>
+          <a href="http://chukwumaokere.com/about.html" class="item">About the Creator</a>
         </div>
       </div>
     </div>
