--- a/welcome.html
+++ b/welcome.html
@@ -157,7 +157,7 @@
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Home</a>
-    <a href="about.html" class="item">About OPHION</a>
+    <a href="aboutsite.html" class="item">About OPHION</a>
     <div class="right menu">
       <div class="item">
         <a href="logout.php" class="ui button">Logout</a>
@@ -182,7 +182,7 @@
 		</script>
         </a>
         <a href="welcome.html" class="item">Home</a>
-        <a href="about.html" class="item">About OPHION</a>
+        <a href="aboutsite.html" class="item">About OPHION</a>
         <div class="right item">
           <a href="logout.html" class="ui inverted button">Logout</a>
         </div>
@@ -199,11 +199,11 @@
 </div>
 
 <!-- Footer -->
- <div class="ui inverted vertical footer segment">
+  <div class="ui inverted vertical footer segment">
     <div class="ui container">
       <div class="ui stackable inverted divided equal height stackable grid">
         <div class="three wide column">
-          <h4 href="about.html" class="ui inverted header">About OPHION</h4>
+          <h4 href="aboutsite.html" class="ui inverted header">About OPHION</h4>
           <div class="ui inverted link list">
             <a href="#" class="item">Sitemap</a>
             <a href="#" class="item">Contact Us</a>
@@ -221,11 +221,12 @@
         </div>
         <div class="seven wide column">
           <h4 class="ui inverted header">© 2016 OPHION</h4>
-          <p>Extra space</p>
+          <a href="aboutsite.html" class="item">About Project: OPHION</a><br>
+          <a href="http://chukwumaokere.com/about.html" class="item">About the Creator</a>
         </div>
       </div>
     </div>
-  </div>
+  </div> 
   </div>
 </body>
 </html>
