added proper logout screen with splash, added redirect logout
need to configure new user form, and db work on it, and also summary of
product

--- a/aboutsite.html
+++ b/aboutsite.html
@@ -78,7 +78,7 @@
         <div class="menu">
         <div class="header">OPHION</div>
         
-        <div class="item">
+        <div class="item">Tasks
             <i class="dropdown icon"></i>
             <div class="menu">
               <a class="item" href="http://ophion.chukwumaokere.com/welcome.html">Home</a>
