huge haul. added favicon and phone icons, updated about site and all files headers

--- a/newuser.html
+++ b/newuser.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" type="text/css" href="../dist/components/list.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/message.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
+  <link rel="shortcut icon" href="./assets/images/favicon.ico">
 
   <script src="assets/library/jquery.min.js"></script>
   <script src="../dist/components/form.js"></script>
@@ -152,7 +153,7 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="users icon"></i>
-            <input type="text" name="company_id" placeholder="Comapny ID (if applicable)">
+            <input type="text" name="company_id" placeholder="Company ID (if applicable)">
           </div>
         </div>
         
