--- a/welcome.html
+++ b/welcome.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/sidebar.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/transition.css">
+  <link rel="shortcut icon" href="./assets/images/favicon.ico">
 
   <style type="text/css">
 
@@ -205,18 +206,18 @@
         <div class="three wide column">
           <h4 href="aboutsite.html" class="ui inverted header">About OPHION</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item">Sitemap</a>
-            <a href="#" class="item">Contact Us</a>
-            <a href="#" class="item">Privacy Policy</a>
-            <a href="#" class="item">Terms of Use</a>
+            <a href="./sitemap.html" class="item">Sitemap</a>
+            <a href="./contactus.html" class="item">Contact Us</a>
+            <a href="./privacypolicy.html" class="item">Privacy Policy</a>
+            <a href="./tos.html" class="item">Terms of Use</a>
           </div>
         </div>
         <div class="four wide column">
           <h4 class="ui inverted header">Services</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item">FAQ</a>
-            <a href="#" class="item">How to use OPHION</a>
-            <a href="#" class="item">Tell us how we're doing!</a>
+            <a href="./faq.html" class="item">FAQ</a>
+            <a href="./howto.html" class="item">How to use OPHION</a>
+            <a href="./feedback.html" class="item">Tell us how we're doing!</a>
           </div>
         </div>
         <div class="seven wide column">
