--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" type="text/css" href="../dist/components/list.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/message.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
+  <link rel="shortcut icon" href="./assets/images/favicon.ico">
 
   <script src="assets/library/jquery.min.js"></script>
   <script src="../dist/components/form.js"></script>
@@ -142,7 +143,8 @@
     </form>
 
     <div class="ui message">
-      New to us?  <a href="newuser.html">New User</a>
+      New to us?  <a href="newuser.html">New User.</a><br>
+      <a href="forgotpassword.html">Forgot your password?</a>
     </div>
   </div>
 </div>
