changed lets go to learn more, added placeholders

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </h1>
       <h2>The World's Best Employee Handler</h2>
       <a href="learn.html">
-      <div class="ui huge grey button">Let's Go! <i class="right arrow icon"></i></div>
+      <div class="ui huge grey button">Learn More <i class="right arrow icon"></i></div>
       </div>
       </a>
 
