--- a/welcomeemployer.html
+++ b/welcomeemployer.html
@@ -150,10 +150,13 @@
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
   <a href="home.html" class="active item">Home</a>
+  <a href=" " class="item">Manage Employees</a>
+  <a href=" " class="item">Create New Schedule</a>
   <a href=" " class="item">View Schedules</a>
-  <a href=" " class="item">Request Time Off</a>
+  <a href=" " class="item">Manage Requests</a>
   <a href=" " class="item">Send Message</a>
   <a href="logout.php" class="item">Logout</a>
+  
 </div>
 
 <!-- Following Menu -->
@@ -178,13 +181,13 @@
         <a class="toc item">
           <i class="sidebar icon"></i>
         </a>
-        <a href="welcome.html" class="active item">Menu
+        <a href="welcomeemployer.html" class="active item">Menu
         <script>
 		$('.ui.sidebar')
 		  .sidebar('show');
 		</script>
         </a>
-        <a href="welcome.html" class="item">Home</a>
+        <a href="welcomeemployer.html" class="item">Home</a>
         <a href="aboutsite.html" class="item">About OPHION</a>
         <div class="right item">
           <a href="logout.php" class="ui inverted button">Logout</a>
