--- a/accountcreated.html
+++ b/accountcreated.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta http-equiv="refresh" content="3;url=http://ophion.chukwumaokere.com/login.html" />
 
   <!-- Site Properties -->
-  <title>Welcome to OPHION!</title>
+  <title>Account Created!</title>
   <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/site.css">
 
@@ -144,65 +145,21 @@
     });
   </script>
 </head>
-
 <body>
 
-<!-- Sidebar Menu -->
-<div class="ui vertical inverted sidebar menu">
-  <a href="welcome.html" class="active item">Home</a>
-  <a href=" " class="item">My Schedule</a>
-  <a href=" " class="item">View Schedules</a>
-  <a href=" " class="item">Request Time Off</a>
-  <a href=" " class="item">Manage Requests</a>
-  <a href=" " class="item">Send Message</a>
-  <a href=" " class="item">View Profile</a>
-  <a href="logout.php" class="item">Logout</a>
-</div>
-
-<!-- Following Menu -->
-<div class="ui large top fixed hidden menu">
-  <div class="ui container">
-    <a class="active item">Home</a>
-    <a href="aboutsite.html" class="item">About OPHION</a>
-    <div class="right menu">
-      <div class="item">
-        <a href="logout.php" class="ui button">Logout</a>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Page Contents -->
 <div class="pusher">
   <div class="ui inverted vertical masthead center aligned segment">
 
-    <div class="ui container">
-      <div class="ui large secondary inverted pointing menu">
-        <a class="toc item">
-          <i class="sidebar icon"></i>
-        </a>
-        <a href="welcome.html" class="active item">Menu
-        <script>
-		$('.ui.sidebar')
-		  .sidebar('show');
-		</script>
-        </a>
-        <a href="welcome.html" class="item">Home</a>
-        <a href="aboutsite.html" class="item">About OPHION</a>
-        <div class="right item">
-          <a href="logout.php" class="ui inverted button">Logout</a>
-        </div>
+    <div class="ui text container">
+      <h1 class="ui inverted header">
+       Congratulations! Account Created
+      </h1>
+      <h2>Please Login</h2>
       </div>
-    </div>
-    
-<!-- Things in between -->
-<div class="ui text container">
-	<div>
-      <h1 class="ui inverted header">Welcome to OPHION</h1>
-      <h2>Please choose an option on the left</h2>
-    </div>
-</div>
-</div>
+
+  </div>
 
 <!-- Footer -->
   <div class="ui inverted vertical footer segment">
@@ -233,6 +190,6 @@
       </div>
     </div>
   </div> 
-  </div>
+</div>
 </body>
 </html>
