--- a/welcomeemployer.html
+++ b/welcomeemployer.html
@@ -149,12 +149,15 @@
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
-  <a href="home.html" class="active item">Home</a>
+  <a href="welcomeemployer.html" class="active item">Home</a>
   <a href=" " class="item">Manage Employees</a>
   <a href=" " class="item">Create New Schedule</a>
+  <a href=" " class="item">My Schedule</a>
   <a href=" " class="item">View Schedules</a>
+  <a href=" " class="item">Request Time Off</a>
   <a href=" " class="item">Manage Requests</a>
   <a href=" " class="item">Send Message</a>
+  <a href=" " class="item">View Profile</a>
   <a href="logout.php" class="item">Logout</a>
   
 </div>
