--- a/aboutsite.html
+++ b/aboutsite.html
@@ -78,10 +78,11 @@
         <div class="menu">
         <div class="header">OPHION</div>
         
-        <div class="item">Tasks
+        <div class="item">
             <i class="dropdown icon"></i>
+            Tasks
             <div class="menu">
-              <a class="item" href="http://ophion.chukwumaokere.com/welcome.html">Home</a>
+              <a class="item" href="home.php">Home</a>
               <a class="item" href="logout.html">Logout</a>
             </div>
         </div>
