moved session start to beginning, added forgot password on newuser page, hashed password for security purposes
removed pointless script I wrote before.

--- a/newuser.html
+++ b/newuser.html
@@ -482,7 +482,8 @@
         <div class="ui fluid large black submit button">Create Account!</div>
       </div>
       <div class="ui message">
-      Back to Home? <a href="index.html">Click Me to go back</a>
+      Back to Home? <a href="index.html">Click Me to go back</a><br>
+      Forgot Password? <a href="forgotpassword.html">Click here.</a>
     </div>
 
       <div class="ui error message"></div>
