added session resume and proper logout function
also added profile to test session information
will create proper view profile page

--- a/newuser.html
+++ b/newuser.html
@@ -499,7 +499,7 @@
         <div class="inline field">
     	<div class="ui checkbox">
       	<input type="checkbox" name="terms">
-     	<label>I agree to the <a href="termsandconditions.html">Terms and Conditions</a>.</label></div>
+     	<label>I agree to the <a href="tos.html">Terms and Conditions</a>.</label></div>
         <br>
         
         <div class="ui fluid large black submit button">Create Account!</div>
