--- a/welcome.html
+++ b/welcome.html
@@ -155,7 +155,7 @@
   <a href=" " class="item">Request Time Off</a>
   <a href=" " class="item">Manage Requests</a>
   <a href=" " class="item">Send Message</a>
-  <a href=" " class="item">View Profile</a>
+  <a href="./profile.php" class="item">View Profile</a>
   <a href="logout.php" class="item">Logout</a>
 </div>
 
@@ -233,6 +233,6 @@
       </div>
     </div>
   </div> 
-  </div>
+</div>
 </body>
 </html>
