--- a/welcomeemployer.html
+++ b/welcomeemployer.html
@@ -157,7 +157,7 @@
   <a href=" " class="item">Request Time Off</a>
   <a href=" " class="item">Manage Requests</a>
   <a href=" " class="item">Send Message</a>
-  <a href=" " class="item">View Profile</a>
+  <a href="./profile.php" class="item">View Profile</a>
   <a href="logout.php" class="item">Logout</a>
   
 </div>
