--- a/aboutsite.html
+++ b/aboutsite.html
@@ -83,7 +83,7 @@
             Tasks
             <div class="menu">
               <a class="item" href="home.php">Home</a>
-              <a class="item" href="logout.html">Logout</a>
+              <a class="item" href="logout.php">Logout</a>
             </div>
         </div>
         </div>
