--- a/logout.html
+++ b/logout.html
@@ -150,7 +150,7 @@
 <!-- Following Menu -->
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
-    <a class="active item">Home</a>
+    <a href="index.html" class="active item">Home</a>
     <a href="aboutsite.html" class="item">About OPHION</a>
     <div class="right menu">
       <div class="item">
@@ -165,7 +165,7 @@
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
-  <a class="active item">Home</a>
+  <a href="index.html" class="active item">Home</a>
   <a href="login.html" class="item">Login</a>
   <a href="newuser.html" class="item">New User</a>
 </div>
@@ -180,7 +180,7 @@
         <a class="toc item">
           <i class="sidebar icon"></i>
         </a>
-        <a class="item">Home</a>
+        <a href="index.html" class="item">Home</a>
         <a href="aboutsite.html" class="item">About OPHION</a>
         <div class="right item">
           <a href="login.html" class="ui inverted button">Login!</a>
